<resources>
    <string name="app_name">Latihan 3</string>

    <!--Asynctask-->
    <string name="status">Status Aplikasi</string>
    <string name="status_pre">Status : onPreExecute</string>
    <string name="status_post">Status : onPostExecute</string>
    <string name="description">Description</string>
    <string name="asyntask">Asyntask</string>

    <!--Service-->
    <string name="service">Service</string>
    <string name="start_service">Start Service</string>
    <string name="start_intent_service">Start Intent Service</string>
    <string name="start_bound_service">Start Bound Service</string>
    <string name="stop_bound_service">Stop bound Service</string>

    <!--Broadcast-->
    <string name="this_sms_receiver_app">Ini Aplikasi Sms Receiver</string>
    <string name="download_file">Download a File</string>
    <string name="coming_from">Coming From</string>
    <string name="this_play">Oii, main kesini jadi ngga? sekarang yak.</string>
    <string name="close">Tutup</string>
    <string name="check_sms_permission">Check SMS Permission</string>
    <string name="broadcast">Broadcast</string>
    <string name="sms_receiver">SMS Receiver</string>
    <string name="download">Download</string>

    <!--Alarm-->
    <string name="alarm_manager">Alarm Manager</string>
    <string name="one_time_alarm">One Time Alarm</string>
    <string name="alarm_date">Tanggal Alarm</string>
    <string name="set_one_time_alarm">Set One Time Alarm</string>
    <string name="alarm_message">Pesan Alarm</string>
    <string name="repeating_alarm">Repeating Alarm</string>
    <string name="set_repeating_alarm">Set Repeating Alarm</string>
    <string name="cancel_alarm">Batalkan Alarm</string>
    <string name="alarm_time">Waktu Alarm</string>

    <!--Job Scheduler-->
    <string name="start">Start</string>
    <string name="cancel">Cancel</string>
    <string name="description_job">Click the start button to start the weather task or click the cancel button to cancel the weather task</string>
    <string name="job_scheduler">Job Scheduler</string>

    <!--GCM-->
    <string name="gcm_network_manager">GCM Network Manager</string>
    <string name="set_scheduler">Set Scheduler</string>
    <string name="cancel_scheduler">Cancel Scheduler</string>

    <!--Firebase Dispatcher-->
    <string name="firebase_dispatcher">Firebase Dispatcher</string>

    <!--Backstack-->
    <string name="string_backstack">Navigasi, Task, dan Backstack</string>
    <string name="activity_home">Home</string>
    <string name="activity_detail">Detail</string>
    <string name="title">Title</string>
    <string name="message">Message</string>
    <string name="open_detail">Open Detail</string>

    <!--MVVM-->
    <string name="description_vm">Deskripsi</string>
    <string name="temperature">Temperatur</string>
    <string name="name">Nama Kota</string>
    <string name="insert_city">Masukkan id kota misal Jakarta = 1642911</string>
    <string name="search">Cari</string>
    <string name="id_jakarta_bandung_semarang">1642911,1650357,1627896</string>
    <string name="mvvm">MVVM</string>
</resources>
