<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:padding="16dp"
    android:orientation="vertical">

    <Button
        android:id="@+id/btn_asyntask"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/asyntask" />

    <Button
        android:id="@+id/btn_service"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/service" />

    <Button
        android:id="@+id/btn_broadcast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/broadcast" />

    <Button
        android:id="@+id/btn_alarm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/alarm_manager" />

    <Button
        android:id="@+id/btn_job"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/job_scheduler" />

    <Button
        android:id="@+id/btn_gcm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/gcm_network_manager" />
</LinearLayout>